# swagger-output.json
@@ -21,7 +21,7 @@
         }
       }
     },
-    "/account/signup": {
+    "/api/hlshop/account/signup": {
       "post": {
         "description": "",
         "parameters": [
@@ -57,7 +57,7 @@
         }
       }
     },
-    "/account/verify": {
+    "/api/hlshop/account/verify": {
       "post": {
         "description": "",
         "parameters": [
@@ -90,7 +90,7 @@
         }
       }
     },
-    "/account/resend-otp": {
+    "/api/hlshop/account/resend-otp": {
       "post": {
         "description": "",
         "parameters": [
@@ -120,7 +120,7 @@
         }
       }
     },
-    "/account/signin": {
+    "/api/hlshop/account/signin": {
       "post": {
         "description": "",
         "parameters": [
@@ -153,7 +153,7 @@
         }
       }
     },
-    "/user/create-profile": {
+    "/api/hlshop/user/create-profile": {
       "post": {
         "description": "",
         "parameters": [
@@ -203,7 +203,7 @@
         }
       }
     },
-    "/user/get-profile": {
+    "/api/hlshop/user/get-profile": {
       "get": {
         "description": "",
         "parameters": [
@@ -226,7 +226,7 @@
         }
       }
     },
-    "/user/update-profile": {
+    "/api/hlshop/user/update-profile": {
       "put": {
         "description": "",
         "parameters": [
@@ -279,7 +279,7 @@
         }
       }
     },
-    "/user/delete-profile": {
+    "/api/hlshop/user/delete-profile": {
       "delete": {
         "description": "",
         "parameters": [
@@ -302,7 +302,7 @@
         }
       }
     },
-    "/category/create-category": {
+    "/api/hlshop/category/create-category": {
       "post": {
         "description": "",
         "parameters": [
@@ -340,7 +340,7 @@
         }
       }
     },
-    "/category/update-category": {
+    "/api/hlshop/category/update-category": {
       "put": {
         "description": "",
         "parameters": [
@@ -378,7 +378,7 @@
         }
       }
     },
-    "/category/delete-category": {
+    "/api/hlshop/category/delete-category": {
       "delete": {
         "description": "",
         "parameters": [
@@ -404,6 +404,326 @@
           "200": {
             "description": "OK"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/category/get-list": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "pageSize",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/address/add": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "receiverContactName": {
+                  "example": "any"
+                },
+                "receiverPhone": {
+                  "example": "any"
+                },
+                "receiverEmail": {
+                  "example": "any"
+                },
+                "cityName": {
+                  "example": "any"
+                },
+                "districtName": {
+                  "example": "any"
+                },
+                "wardName": {
+                  "example": "any"
+                },
+                "addressDetail": {
+                  "example": "any"
+                },
+                "addressLabel": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/address/update": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "receiverAddressID": {
+                  "example": "any"
+                },
+                "receiverContactName": {
+                  "example": "any"
+                },
+                "receiverPhone": {
+                  "example": "any"
+                },
+                "receiverEmail": {
+                  "example": "any"
+                },
+                "cityName": {
+                  "example": "any"
+                },
+                "districtName": {
+                  "example": "any"
+                },
+                "wardName": {
+                  "example": "any"
+                },
+                "addressDetail": {
+                  "example": "any"
+                },
+                "addressLabel": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/address/delete": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "receiverAddressID": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/address/add-default": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "receiverAddressID": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/address/get-list": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "offset",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/hlshop/product/create-product": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "slogan": {
+                  "example": "any"
+                },
+                "decription": {
+                  "example": "any"
+                },
+                "notes": {
+                  "example": "any"
+                },
+                "madeIn": {
+                  "example": "any"
+                },
+                "uses": {
+                  "example": "any"
+                },
+                "idCategory": {
+                  "example": "any"
+                },
+                "attribute1": {
+                  "example": "any"
+                },
+                "attribute2": {
+                  "example": "any"
+                },
+                "atttributeValue1": {
+                  "example": "any"
+                },
+                "atttributeValue2": {
+                  "example": "any"
+                },
+                "quantity": {
+                  "example": "any"
+                },
+                "price": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
           "401": {
             "description": "Unauthorized"
           },
